--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="A website containing profile cards">
+    <title>Profile Card</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div id="mainContainer">
+        <div class="profileCard" id="profileCard1">
+            <h1>Bobby Joe</h1>
+            <img src="" alt="Profile Card One's picture">
+            <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere, nisi natus. Libero incidunt, porro ipsa obcaecati beatae explicabo voluptatum totam. Debitis esse quo dolor magni aliquid ducimus nam unde inventore quaerat dolores ut vero et omnis exercitationem quas nesciunt, molestiae rem quod mollitia? Aspernatur excepturi ratione sint iste, iusto molestiae.</p>
+            <p class="emailAddress">profileOnesmail@gmail.com</p>
+        </div>
+        <div class="profileCard" id="profileCard2">
+            <h1>Mike Bob</h1>
+            <img src="" alt="Profile Card Two's picture">
+            <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere, nisi natus. Libero incidunt, porro ipsa obcaecati beatae explicabo voluptatum totam. Debitis esse quo dolor magni aliquid ducimus nam unde inventore quaerat dolores ut vero et omnis exercitationem quas nesciunt, molestiae rem quod mollitia? Aspernatur excepturi ratione sint iste, iusto molestiae.</p>
+            <p class="emailAddress">profileOnesmail@gmail.com</p>
+        </div>
+        <div class="profileCard" id="profileCard2">
+            <h1>John Doe</h1>
+            <img src="" alt="Profile Card Three's picture">
+            <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere, nisi natus. Libero incidunt, porro ipsa obcaecati beatae explicabo voluptatum totam. Debitis esse quo dolor magni aliquid ducimus nam unde inventore quaerat dolores ut vero et omnis exercitationem quas nesciunt, molestiae rem quod mollitia? Aspernatur excepturi ratione sint iste, iusto molestiae.</p>
+            <p class="emailAddress">profileOnesmail@gmail.com</p>
+        </div>
+    </div>
 </body>
 </html>
