Added an image folder with an image inside of it, styled the first profile card and included the image source in the HTML code

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div id="mainContainer">
         <div class="profileCard" id="profileCard1">
             <h1>Bobby Joe</h1>
-            <img src="" alt="Profile Card One's picture">
+            <img src="./images/madLittleguy.png" alt="Profile Card One's picture">
             <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere, nisi natus. Libero incidunt, porro ipsa obcaecati beatae explicabo voluptatum totam. Debitis esse quo dolor magni aliquid ducimus nam unde inventore quaerat dolores ut vero et omnis exercitationem quas nesciunt, molestiae rem quod mollitia? Aspernatur excepturi ratione sint iste, iusto molestiae.</p>
-            <p class="emailAddress">profileOnesmail@gmail.com</p>
+            <p class="emailAddress">profileOneEmail@gmail.com</p>
         </div>
         <div class="profileCard" id="profileCard2">
             <h1>Mike Bob</h1>
