--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <p class="emailAddress">profileOneEmail@gmail.com</p>
         </div>
         <div class="profileCard" id="profileCard2">
+            <img src="./images/madLittleguy.png" alt="Profile Card Two's picture">
             <h1>Mike Bob</h1>
-            <img src="" alt="Profile Card Two's picture">
             <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere, nisi natus. Libero incidunt, porro ipsa obcaecati beatae explicabo voluptatum totam. Debitis esse quo dolor magni aliquid ducimus nam unde inventore quaerat dolores ut vero et omnis exercitationem quas nesciunt, molestiae rem quod mollitia? Aspernatur excepturi ratione sint iste, iusto molestiae.</p>
             <p class="emailAddress">profileOnesmail@gmail.com</p>
         </div>
