Updated email names

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <img src="./images/madLittleguy.png" alt="Profile Card Two's picture">
             <h1>Mike Bob</h1>
             <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere, nisi natus. Libero incidunt, porro ipsa obcaecati beatae explicabo voluptatum totam. Debitis esse quo dolor magni aliquid ducimus nam unde inventore quaerat dolores ut vero et omnis exercitationem quas nesciunt, molestiae rem quod mollitia? Aspernatur excepturi ratione sint iste, iusto molestiae.</p>
-            <p class="emailAddress">profileOnesmail@gmail.com</p>
+            <p class="emailAddress">profileTwosmail@gmail.com</p>
         </div>
         <div class="profileCard" id="profileCard3">
             <img src="./images/madLittleguy.png" alt="Profile Card Three's picture">
             <h1>John Doe</h1>
             <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere, nisi natus. Libero incidunt, porro ipsa obcaecati beatae explicabo voluptatum totam. Debitis esse quo dolor magni aliquid ducimus nam unde inventore quaerat dolores ut vero et omnis exercitationem quas nesciunt, molestiae rem quod mollitia? Aspernatur excepturi ratione sint iste, iusto molestiae.</p>
-            <p class="emailAddress">profileOnesmail@gmail.com</p>
+            <p class="emailAddress">profileThreesmail@gmail.com</p>
         </div>
     </div>
 </body>
